--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <title>Run Buddy</title>
   <link
-  rel="stylesheet" href="assets/style.css">
+  rel="stylesheet" href="style.css">
  
 </head>
 
